# fake-module

./: .bumpversion.cfg  .cspell.json  .quickdocs.yml  README.md  package-lock.json  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: publish.yml
docs/: conf.py  index.rst
docs/sphinx/: conf.py
src/: __init__.py  exceptions.py  fake_module.py
test/: test_fake_module.py
tests/: conftest.py  test_fake_module.py
