[metadata]
name = fake_module
version = 1.0.0

description = Globally replace a module with a configurable fake.
url = https://github.com/joellefkowitz/fake-module

license_file = LICENSE.md
long-description = file: README.md
long_description_content_type = text/markdown

author = Joel Lefkowitz
author-email = joellefkowitz@hotmail.com

project_urls =
   Bug Tracker   = https://github.com/joellefkowitz/fake-module/issues
   CI            = https://github.com/joellefkowitz/fake-module/actions
   Documentation = https://fake-module.readthedocs.io/en/latest/
   Source Code   = https://github.com/joellefkowitz/fake-module

keywords = 
    fake
    module

classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
include_package_data = True
python_requires = >=3.6
setup_requires = setuptools

[options.packages.find]
exclude =
    *.tests
    *.tests.*
    tests.*
    tests
    